# rhine-koans

./: CHANGELOG.md  README.md  TODO.md  cabal.project  check_diffs.sh  flake.nix  hie.yaml  rhine-koans.cabal
.github/workflows/: ci.yml  update-flake-lock.yml
diffs/koans/basic/1/1-hello-rhine/: diff.txt
diffs/koans/basic/1/2-fix-the-bug/: diff.txt
diffs/koans/basic/1/3-faster/: diff.txt
diffs/koans/basic/1/4-compose/: diff.txt
diffs/koans/basic/1/5-compose-more/: diff.txt
diffs/koans/basic/1/6-compose-signal-functions-and-clocks/: diff.txt
diffs/koans/basic/1/7-compose-on-the-same-clock/: diff.txt
diffs/koans/basic/1/8-compose-on-different-clocks/: diff.txt
diffs/koans/basic/2/1-input/: diff.txt
diffs/koans/basic/2/2-count-the-words/: diff.txt
diffs/koans/basic/2/3-count-the-lines/: diff.txt
diffs/koans/basic/2/4-count-all-the-words/: diff.txt
diffs/koans/basic/2/5-count-all-the-chars/: diff.txt
diffs/koans/basic/2/6-count-everything/: diff.txt
diffs/koans/basic/2/7-count-everything-nicer/: diff.txt
diffs/koans/basic/2/8-dont-count-everything/: diff.txt
diffs/koans/basic/2/9-modularize/: diff.txt
diffs/koans/basic/3/1-exceptions/: diff.txt
diffs/koans/basic/3/2-state/: diff.txt
diffs/koans/basic/3/3-asynchronize/: diff.txt
diffs/koans/ui/1-gloss/1-circle/: diff.txt
diffs/koans/ui/1-gloss/2-move/: diff.txt
diffs/koans/ui/1-gloss/3-modularize/: diff.txt
diffs/koans/ui/1-gloss/4-user-input/: diff.txt
diffs/koans/ui/1-gloss/5-randomness/: diff.txt
diffs/koans/ui/1-gloss/6-control-flow/: diff.txt
generic/: README.md
generic/empty-test-suite/: Main.hs
generic/reimport-main/: Main.hs
generic/test-gloss/: TestGloss.hs
generic/test-io/: TestIO.hs
koans/basic/: Koan1.hs  Koan2.hs  Koan3.hs  Test1.hs
koans/basic/1-hello-rhine/: Koan.hs  Test.hs
koans/basic/1-hello-rhine/test/: Test.hs
koans/basic/1/1-hello-rhine/: Koan.hs
koans/basic/1/1-hello-rhine/solution/: Koan.hs
koans/basic/1/2-fix-the-bug/: Koan.hs
koans/basic/1/2-fix-the-bug/solution/: Koan.hs
koans/basic/1/3-faster/: Koan.hs
koans/basic/1/3-faster/solution/: Koan.hs
koans/basic/1/4-compose/: Koan.hs
koans/basic/1/4-compose/solution/: Koan.hs
koans/basic/1/4-compose/test/: Test.hs
koans/basic/1/5-compose-more/solution/: Koan.hs
koans/basic/1/6-compose-signal-functions-and-clocks/test/: Test.hs
koans/basic/1/7-compose-on-the-same-clock/test/: Test.hs
koans/basic/1/8-compose-on-different-clocks/: Koan.hs
koans/basic/1/8-compose-on-different-clocks/solution/: Koan.hs
koans/basic/2-fix-the-bug/: Koan.hs  Test.hs
koans/basic/2-fix-the-bug/solution/: Koan.hs
koans/basic/2-fix-the-bug/test/: Test.hs
koans/basic/2/1-input/: Koan.hs
koans/basic/2/2-count-the-words/: Koan.hs
koans/basic/2/2-count-the-words/solution/: Koan.hs
koans/basic/2/2-count-the-words/test/: Test.hs
koans/basic/2/3-count-the-lines/: Koan.hs
koans/basic/2/3-count-the-lines/solution/: Koan.hs
koans/basic/2/3-count-the-lines/test/: Test.hs
koans/basic/2/4-count-all-the-words/: Koan.hs
koans/basic/2/4-count-all-the-words/solution/: Koan.hs
koans/basic/2/4-count-all-the-words/test/: Test.hs
koans/basic/2/5-count-all-the-chars/: Koan.hs
koans/basic/2/5-count-all-the-chars/solution/: Koan.hs
koans/basic/2/5-count-all-the-chars/test/: Test.hs
koans/basic/2/6-count-everything/: Koan.hs
koans/basic/2/6-count-everything/solution/: Koan.hs
koans/basic/2/7-count-everything-nicer/: Koan.hs
koans/basic/2/7-count-everything-nicer/solution/: Koan.hs
koans/basic/2/7-count-everything-nicer/test/: Test.hs
koans/basic/2/8-dont-count-everything/: Koan.hs
koans/basic/2/8-dont-count-everything/solution/: Koan.hs
koans/basic/2/9-modularize/: Koan.hs
koans/basic/2/9-modularize/solution/: Koan.hs
koans/basic/2/9-modularize/test/: Test.hs
koans/basic/3-faster/: Koan.hs  Test.hs
koans/basic/3/1-exceptions/: Koan.hs
koans/basic/3/1-exceptions/solution/: Koan.hs
koans/basic/3/1-exceptions/test/: Test.hs
koans/basic/3/2-state/: Koan.hs
koans/basic/3/2-state/solution/: Koan.hs
koans/basic/3/2-state/test/: Test.hs
koans/basic/3/3-asynchronize/: Koan.hs
koans/basic/3/3-asynchronize/solution/: Koan.hs
koans/basic/3/3-asynchronize/test/: Test.hs
koans/basic/4-compose/: Koan.hs  Test.hs
koans/basic/5-compose-more/: Koan.hs  Test.hs
koans/basic/6-compose-signal-functions-and-clocks/: Koan.hs
koans/basic/6-compose-signal-functions-and-clocks/solution/: Koan.hs
koans/basic/7-compose-on-the-same-clock/: Koan.hs
koans/basic/8-compose-on-different-clocks/: Koan.hs  Test.hs
koans/basic/8-compose-on-different-clocks/test/: Test.hs
koans/basic/9-input/: Koan.hs  Test.hs
koans/ui/1-gloss/1-circle/: Koan.hs
koans/ui/1-gloss/1-circle/solution/: Koan.hs
koans/ui/1-gloss/1-circle/test/: Test.hs
koans/ui/1-gloss/1-square/: Koan.hs
koans/ui/1-gloss/1-square/solution/: Koan.hs
koans/ui/1-gloss/2-move/: Koan.hs
koans/ui/1-gloss/2-move/solution/: Koan.hs
koans/ui/1-gloss/2-move/test/: Test.hs
koans/ui/1-gloss/3-modularize/: Koan.hs
koans/ui/1-gloss/3-modularize/solution/: Koan.hs
koans/ui/1-gloss/3-modularize/test/: Test.hs
koans/ui/1-gloss/4-user-input/: Koan.hs
koans/ui/1-gloss/4-user-input/solution/: Koan.hs
koans/ui/1-gloss/4-user-input/test/: Test.hs
koans/ui/1-gloss/5-randomness/: Koan.hs
koans/ui/1-gloss/5-randomness/solution/: Koan.hs
koans/ui/1-gloss/5-randomness/test/: Test.hs
koans/ui/1-gloss/6-control-flow/: Koan.hs
koans/ui/1-gloss/6-control-flow/solution/: Koan.hs
koans/ui/1-gloss/6-control-flow/test/: Test.hs
koans/ui/1-gloss/snake/: Koan.hs
koans/ui/1-gloss/snake/solution/: Koan.hs
koans/ui/1-gloss/snake/test/: Test.hs
koans/wsml/: Koan.hs  KoanWS.hs
presentation/: default.nix  presentation.md
