cabal-version:      3.4
name:               rhine-koans
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Manuel Bärenz
maintainer:         programming@manuelbaerenz.de
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

tested-with:
  GHC == 9.2.8
  GHC == 9.4.8
  GHC == 9.6.3
  GHC == 9.8.1


common opts
    ghc-options: -Wall
    default-language: GHC2021
    build-depends:    base >=4.16.4.0 && <4.20
                    , rhine ^>= 1
                    , text ^>= 2.0
    default-extensions:
        DataKinds
        OverloadedStrings
    if flag(dev)
        ghc-options: -Werror

common exec
    import:           opts
    other-modules:    Koan

common test
    import:           exec
    build-depends:
      , rhine-koans:test-io

flag dev
  description: Enable warnings as errors. Active on ci.
  default: False
  manual: True

library test-io
    import:           opts
    hs-source-dirs:   generic/test-io
    exposed-modules:  TestIO
    build-depends:
        silently ^>= 1.2

executable basic-1-hello-rhine
    import:           exec
    main-is:          Main.hs
    hs-source-dirs:   koans/basic/1-hello-rhine
                    , generic/reimport-main

test-suite basic-1-hello-rhine-test
    import:           test
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   koans/basic/1-hello-rhine

executable basic-2-fix-the-bug
    import:           exec
    main-is:          Main.hs
    hs-source-dirs:   koans/basic/2-fix-the-bug
                    , generic/reimport-main

test-suite basic-2-fix-the-bug-test
    import:           test
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   koans/basic/2-fix-the-bug

executable basic-3-faster
    import:           exec
    main-is:          Main.hs
    hs-source-dirs:   koans/basic/3-faster
                    , generic/reimport-main

test-suite basic-3-faster-test
    import:           test
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   koans/basic/3-faster

executable basic-4-compose
    import:           exec
    main-is:          Main.hs
    hs-source-dirs:   koans/basic/4-compose
                    , generic/reimport-main

test-suite basic-4-compose-test
    import:           test
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   koans/basic/4-compose

executable basic-5-compose-more
    import:           exec
    main-is:          Main.hs
    hs-source-dirs:   koans/basic/5-compose-more
                    , generic/reimport-main

test-suite basic-5-compose-more-test
    import:           test
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   koans/basic/5-compose-more

executable basic-6-compose-signal-functions-and-clocks
    import:           exec
    main-is:          Main.hs
    hs-source-dirs:   koans/basic/6-compose-signal-functions-and-clocks
                    , generic/reimport-main

test-suite basic-6-compose-signal-functions-and-clocks-test
    import:           test
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   koans/basic/6-compose-signal-functions-and-clocks

executable basic-7-compose-on-the-same-clock
    import:           exec
    main-is:          Main.hs
    hs-source-dirs:   koans/basic/7-compose-on-the-same-clock
                    , generic/reimport-main

test-suite basic-7-compose-on-the-same-clock-test
    import:           test
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   koans/basic/7-compose-on-the-same-clock

executable basic-8-compose-on-different-clocks
    import:           exec
    main-is:          Main.hs
    hs-source-dirs:   koans/basic/8-compose-on-different-clocks
                    , generic/reimport-main

test-suite basic-8-compose-on-different-clocks-test
    import:           test
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   koans/basic/8-compose-on-different-clocks
