cabal-version:      3.4
name:               rhine-koans
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Manuel Bärenz
maintainer:         programming@manuelbaerenz.de
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

tested-with:
  GHC == 9.2.8
  GHC == 9.4.8

common opts
    ghc-options: -Wall
    default-language: GHC2021
    build-depends:    base >=4.16.4.0 && <4.18
                    , rhine ^>= 1.2
                    , text ^>= 2.0
    default-extensions:
        DataKinds
        OverloadedStrings
    if flag(dev)
        ghc-options: -Werror

common exec
    import:           opts
    other-modules:    Koan
    hs-source-dirs:   generic/reimport-main

common test
    import:           exec
    build-depends:
      , rhine-koans:test-io

flag dev
  description: Enable warnings as errors. Active on ci.
  default: False
  manual: True

flag solution
  description: Compile the solutions
  default: False
  manual: True

library test-io
    import:           opts
    hs-source-dirs:   generic/test-io
    exposed-modules:  TestIO
    build-depends:
        silently ^>= 1.2
      , temporary ^>= 1.3

common basic-1-1-hello-rhine
    if flag(solution)
        hs-source-dirs:   koans/basic/1/1-hello-rhine/solution
    else
        hs-source-dirs:   koans/basic/1/1-hello-rhine

executable basic-1-1-hello-rhine
    import:           exec, basic-1-1-hello-rhine
    main-is:          Main.hs

test-suite basic-1-1-hello-rhine-test
    import:           test, basic-1-1-hello-rhine
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   koans/basic/1/1-hello-rhine/test

common basic-1-2-fix-the-bug
    if flag(solution)
        hs-source-dirs:   koans/basic/1/2-fix-the-bug/solution
    else
        hs-source-dirs:   koans/basic/1/2-fix-the-bug

executable basic-1-2-fix-the-bug
    import:           exec, basic-1-2-fix-the-bug
    main-is:          Main.hs

test-suite basic-1-2-fix-the-bug-test
    import:           test, basic-1-2-fix-the-bug
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   koans/basic/1/2-fix-the-bug/test

common basic-1-3-faster
    if flag(solution)
        hs-source-dirs:   koans/basic/1/3-faster/solution
    else
        hs-source-dirs:   koans/basic/1/3-faster

executable basic-1-3-faster
    import:           exec, basic-1-3-faster
    main-is:          Main.hs

test-suite basic-1-3-faster-test
    import:           test, basic-1-3-faster
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   koans/basic/1/3-faster/test

common basic-1-4-compose
    if flag(solution)
        hs-source-dirs:   koans/basic/1/4-compose/solution
    else
        hs-source-dirs:   koans/basic/1/4-compose

executable basic-1-4-compose
    import:           exec, basic-1-4-compose
    main-is:          Main.hs

test-suite basic-1-4-compose-test
    import:           test, basic-1-4-compose
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   koans/basic/1/4-compose/test

common basic-1-5-compose-more
    if flag(solution)
        hs-source-dirs:   koans/basic/1/5-compose-more/solution
    else
        hs-source-dirs:   koans/basic/1/5-compose-more

executable basic-1-5-compose-more
    import:           exec, basic-1-5-compose-more
    main-is:          Main.hs

test-suite basic-1-5-compose-more-test
    import:           test, basic-1-5-compose-more
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   koans/basic/1/5-compose-more/test

common basic-1-6-compose-signal-functions-and-clocks
    if flag(solution)
        hs-source-dirs:   koans/basic/1/6-compose-signal-functions-and-clocks/solution
    else
        hs-source-dirs:   koans/basic/1/6-compose-signal-functions-and-clocks

executable basic-1-6-compose-signal-functions-and-clocks
    import:           exec, basic-1-6-compose-signal-functions-and-clocks
    main-is:          Main.hs

test-suite basic-1-6-compose-signal-functions-and-clocks-test
    import:           test, basic-1-6-compose-signal-functions-and-clocks
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   koans/basic/1/6-compose-signal-functions-and-clocks/test

common basic-1-7-compose-on-the-same-clock
    if flag(solution)
        hs-source-dirs:   koans/basic/1/7-compose-on-the-same-clock/solution
    else
        hs-source-dirs:   koans/basic/1/7-compose-on-the-same-clock

executable basic-1-7-compose-on-the-same-clock
    import:           exec, basic-1-7-compose-on-the-same-clock
    main-is:          Main.hs

test-suite basic-1-7-compose-on-the-same-clock-test
    import:           test, basic-1-7-compose-on-the-same-clock
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   koans/basic/1/7-compose-on-the-same-clock/test

common basic-1-8-compose-on-different-clocks
    if flag(solution)
        hs-source-dirs:   koans/basic/1/8-compose-on-different-clocks/solution
    else
        hs-source-dirs:   koans/basic/1/8-compose-on-different-clocks

executable basic-1-8-compose-on-different-clocks
    import:           exec, basic-1-8-compose-on-different-clocks
    main-is:          Main.hs

test-suite basic-1-8-compose-on-different-clocks-test
    import:           test, basic-1-8-compose-on-different-clocks
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   koans/basic/1/8-compose-on-different-clocks/test

common basic-2-1-input
    if flag(solution)
        hs-source-dirs:   koans/basic/2/1-input/solution
    else
        hs-source-dirs:   koans/basic/2/1-input

executable basic-2-1-input
    import:           exec, basic-2-1-input
    main-is:          Main.hs

test-suite basic-2-1-input-test
    import:           test, basic-2-1-input
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   koans/basic/2/1-input/test

common basic-2-2-count-the-words
    if flag(solution)
        hs-source-dirs:   koans/basic/2/2-count-the-words/solution
    else
        hs-source-dirs:   koans/basic/2/2-count-the-words

executable basic-2-2-count-the-words
    import:           exec, basic-2-2-count-the-words
    main-is:          Main.hs

test-suite basic-2-2-count-the-words-test
    import:           test, basic-2-2-count-the-words
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   koans/basic/2/2-count-the-words/test

common basic-2-3-count-the-lines
    if flag(solution)
        hs-source-dirs:   koans/basic/2/3-count-the-lines/solution
    else
        hs-source-dirs:   koans/basic/2/3-count-the-lines

executable basic-2-3-count-the-lines
    import:           exec, basic-2-3-count-the-lines
    main-is:          Main.hs

test-suite basic-2-3-count-the-lines-test
    import:           test, basic-2-3-count-the-lines
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   koans/basic/2/3-count-the-lines/test

common basic-2-4-count-all-the-words
    if flag(solution)
        hs-source-dirs:   koans/basic/2/4-count-all-the-words/solution
    else
        hs-source-dirs:   koans/basic/2/4-count-all-the-words

executable basic-2-4-count-all-the-words
    import:           exec, basic-2-4-count-all-the-words
    main-is:          Main.hs

test-suite basic-2-4-count-all-the-words-test
    import:           test, basic-2-4-count-all-the-words
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   koans/basic/2/4-count-all-the-words/test
